<resources>
    <string name="app_name">MyFlexibleFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello ini home fragment</string>
    <string name="to_category">Ke Fragment Category</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="this_category">Ini Fragment Category</string>
    <string name="category_lifestyle">Ke Fragment Lifestyle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_dialog">Tampilkan sebuah Dialog</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="category_description">Category Description</string>
    <string name="category_name">Category Name</string>
    <string name="david_moyes">David Moyes</string>
    <string name="louis_van_gaal">Louis Van Gaal</string>
    <string name="jose_mourinho">Jose Mourinho</string>
    <string name="question_coach">Siapa pelatih tersukses Manchester United ?</string>
    <string name="close">Tutup</string>
    <string name="choose">Pilih</string>
    <string name="sir_alex_ferguson">Sir Alex Ferguson</string>
    <string name="this_profile">Ini activity Profile</string>
</resources>
